# prompt-go-mcp

./: .env.example  .gitignore  CURSOR_TEAM_SETUP.md  LICENSE  Makefile  README.md  cursor-integration-guide.json  cursor.example.json  pyproject.toml  setup-cursor-team.py
apps/http_dashboard/: main.py
apps/http_dashboard/routers/: health.py  reports.py  team_insights.py  usage.py
apps/mcp_server/: __main__.py  server_mcp.py  tools.py
config/: cost_models.yaml  policy.example.yaml
infra/docker/: Dockerfile.dashboard  Dockerfile.mcp  docker-compose.yml
infra/github/workflows/: ci.yml
infra/k8s/: Chart.yaml  values.yaml
infra/k8s/templates/: deployment.yaml  ingress.yaml  service.yaml
tests/: test_cost_estimates.py  test_mcp_contract.py  test_optimize_report.py  test_policies.py  test_routing_basic.py
