[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prompt-go"
version = "0.1.0"
description = "Prompt Go – MCP server for Cursor AI Teams: Intelligent routing + ROI analytics + weekly rule recommendations."
requires-python = ">=3.11"
readme = "README.md"
license = { text = "Apache-2.0" }

[project.urls]
Homepage = "https://github.com/offlyn-ai/prompt-go"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["apps*", "packages*"]

[tool.ruff]
line-length = 100

[tool.mypy]
python_version = "3.11"
strict = true
plugins = []

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[project.dependencies]
# Core
pydantic = "^2.7"
orjson = "^3.10"
pyyaml = "^6.0"
tenacity = "^8.3"
# Storage
SQLAlchemy = {version="^2.0", extras=["asyncio"]}
alembic = "^1.13"
aiosqlite = "^0.20"
# HTTP dashboard
fastapi = "^0.111"
uvicorn = "^0.30"
httpx = "^0.27"
jinja2 = "^3.1"
# Learning (optional, feature-flagged)
scikit-learn = "^1.5"
# Observability
opentelemetry-sdk = "^1.25"
opentelemetry-exporter-otlp = "^1.25"
# Testing
pytest = "^8.2"
pytest-asyncio = "^0.23"
coverage = "^7.6"

# MCP: prefer official SDK if present; fallback to local stdio JSON-RPC
modelcontextprotocol = "^0.1.0"

